# video_workflow_rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  requirements.txt
components/vwf-apps/: Cargo.toml
components/vwf-apps/crates/vwf-cli/: Cargo.toml
components/vwf-apps/crates/vwf-cli/src/: generate.rs  main.rs  run.rs  services.rs
components/vwf-apps/crates/vwf-web/: Cargo.toml  README.md  index.html
components/vwf-apps/crates/vwf-web/src/: defaults.rs  main.rs  report.rs
components/vwf-apps/crates/vwf-web/src/components/: mod.rs  run_status_viewer.rs  service_panel.rs  var_editor.rs  workdir_input.rs  workflow_editor.rs
components/vwf-apps/scripts/: build-all.sh  test-all.sh
components/vwf-engine/: Cargo.toml
components/vwf-engine/crates/vwf-config/: Cargo.toml
components/vwf-engine/crates/vwf-config/src/: lib.rs  step.rs  workflow.rs
components/vwf-engine/crates/vwf-config/tests/: workflow.rs
components/vwf-engine/crates/vwf-core/: Cargo.toml
components/vwf-engine/crates/vwf-core/src/: engine.rs  lib.rs  report.rs
components/vwf-engine/crates/vwf-render/: Cargo.toml
components/vwf-engine/crates/vwf-render/src/: lib.rs
components/vwf-engine/crates/vwf-render/tests/: template.rs
components/vwf-engine/crates/vwf-steps/: Cargo.toml
components/vwf-engine/crates/vwf-steps/src/: audio_mix.rs  context.rs  create_slide.rs  ensure_dirs.rs  image_to_video.rs  lib.rs  llm_audit.rs  llm_generate.rs  normalize_volume.rs  run_command.rs  split_sections.rs  text_to_image.rs  text_to_video.rs  tts_generate.rs  video_concat.rs  whisper_transcribe.rs  write_file.rs
components/vwf-engine/scripts/: build-all.sh  test-all.sh
components/vwf-foundation/: Cargo.toml
components/vwf-foundation/crates/vwf-dag/: Cargo.toml
components/vwf-foundation/crates/vwf-dag/src/: lib.rs  state.rs  store.rs  task.rs
components/vwf-foundation/crates/vwf-dag/src/scheduler/: helpers.rs  mod.rs  status.rs
components/vwf-foundation/crates/vwf-dag/src/state/: mod.rs  store.rs
components/vwf-foundation/crates/vwf-dag/tests/: scheduler.rs  state.rs  task.rs
components/vwf-foundation/crates/vwf-queue/: Cargo.toml
components/vwf-foundation/crates/vwf-queue/src/: lib.rs
components/vwf-foundation/crates/vwf-runtime/: Cargo.toml
components/vwf-foundation/crates/vwf-runtime/src/: dry_run.rs  fs.rs  lib.rs  mock.rs  ollama.rs  validate.rs
components/vwf-foundation/crates/vwf-types/: Cargo.toml
components/vwf-foundation/crates/vwf-types/src/: ids.rs  lib.rs  status.rs
components/vwf-foundation/scripts/: build-all.sh  test-all.sh
crates/vwf-cli/: Cargo.toml  build.rs
crates/vwf-cli/src/: main.rs
crates/vwf-core/: Cargo.toml
crates/vwf-core/src/: config.rs  engine.rs  lib.rs  render.rs  runtime.rs  steps.rs
crates/vwf-core/src/dag/: mod.rs  scheduler.rs  task.rs
crates/vwf-core/src/runtime/: dry_run.rs  mod.rs  traits.rs
crates/vwf-core/src/steps/: context.rs  ensure_dirs.rs  llm_generate.rs  mod.rs  run_command.rs  write_file.rs
crates/vwf-core/tests/: integration.rs
crates/vwf-dag/: Cargo.toml
crates/vwf-dag/src/: artifact.rs  scheduler.rs  state.rs
crates/vwf-dag/src/scheduler/: invalidation.rs  mod.rs
crates/vwf-dag/src/state/: queries.rs  workflow.rs
crates/vwf-dag/tests/: artifact.rs  state.rs
crates/vwf-runtime/: Cargo.toml
crates/vwf-runtime/src/: fs.rs  mock.rs
crates/vwf-web/: Cargo.toml  README.md  index.html
crates/vwf-web/src/: main.rs
crates/vwf-web/src/components/: mod.rs  var_editor.rs  workdir_input.rs
docs/: AGENT.md  RUN_REQUEST_SCHEMA.md  TDD_PLAN.md  ai_agent_instructions.md  architecture.md  design.md  flux-client-usage.md  narration-style.md  plan.md  prd.md  refactor-explainer.md  refactor-shorts.md  research.txt  services.md  status.md  svd-client-usage.md  tutorial.md  wan22-client-usage.md
docs/llm-context/: best-practices.md  service-catalog.md  step-types.md  workflow-structure.md
docs/llm-context/examples/: explainer.yaml  short-form.yaml  tutorial.yaml
examples/: README.md
examples/workflows/: explainer_outline.yaml  shorts_narration.yaml
explore-options/: flow-charts.md  implementation-roadmap.md  rules-engine-concept.md  submodule-consideration.md  templates.md  ui-concept.md  use-cases.md  user-persona.md  workflow-engine-concept.md
projects/: README.md
projects/demo-landscape/: workflow.yaml
projects/demo-landscape/scripts/: common.sh
projects/demo-portrait/sample-short/: workflow.yaml
projects/demo-portrait/sample-short/scripts/: common.sh  generate-tts.sh  verify-tts.sh
projects/demo-portrait/vwf-promo/: workflow.yaml
projects/demo-portrait/vwf-promo/scripts/: build-video.sh
projects/self/: brief.txt  workflow.yaml
projects/self/assets/: music-intro.mid  music-outro.mid
projects/self/docs/: video-concept.md
projects/self/scripts/: build-clips.sh  build-final.sh  build-video.sh  common.sh
projects/self/showcase/slides/: 02-dependency-dag.html  04-checkpoints.html  05-incremental.html  06-cta.html
projects/sleepy-coder-2/: README.md
projects/tbt4-tt-rs/: run.json  seed.txt  workflow.yaml
projects/tt-rs/: workflow.yaml
projects/tt-rs/assets/: music-upbeat.mid
projects/tt-rs/scripts/: build-video.sh  common.sh  generate-tts.sh  normalize-volume.sh
scripts/: README.md  build-all.sh  build.sh  check-python-hygiene.sh  demo-explainer.sh  demo-flux.sh  demo-short.sh  flux_client.py  flux_zoom.py  fmt.sh  lint.sh  run.sh  serve-web.sh  setup-python.sh  show.sh  svd_client.py  test-all.sh  test.sh  text_to_video.py  wan22_client.py
test-projects/sample-short/scripts/: build-video.sh
test-projects/sample-video/: .gitignore  HOWTO.md  README.md
test-projects/sample-video/scripts/: build-video.sh
test-projects/tt-rs-explainer/: tts_client.py  workflow.yaml
test-projects/tt-rs-explainer/scripts/: build-video.sh  common.sh  generate-tts.sh
test-projects/vwf-demo/: README.md
test-projects/vwf-demo/work/: description.txt  narration.txt  slides-outline.txt
test-projects/vwf-promo/: .gitignore
test-projects/vwf-promo/scripts/: common.sh
(+30 files in other folders)
