[workspace]
resolver = "2"
members = [
  "crates/vwf-cli",
  "crates/vwf-web",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/softwarewrighter/vwf-apps"
authors = ["Video Workflow Team"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
yew = "0.21"

# Internal dependencies
vwf-core = { path = "../vwf-engine/crates/vwf-core" }
