[workspace]
resolver = "2"
members = [
  "crates/vwf-types",
  "crates/vwf-runtime",
  "crates/vwf-dag",
  "crates/vwf-queue",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/softwarewrighter/vwf-foundation"
authors = ["Video Workflow Team"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
