[package]
name = "vwf-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[features]
default = []
wasm = []

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono.workspace = true
uuid.workspace = true
regex.workspace = true
tracing.workspace = true
vwf-runtime = { path = "../vwf-runtime" }

[dev-dependencies]
tempfile = "3"
