[package]
name = "vwf-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = { version = "0.11", features = ["dialogs", "file", "storage"] }
serde.workspace = true
serde_json.workspace = true
vwf-core = { path = "../vwf-core", features = ["wasm"] }

[package.metadata.trunk]
# trunk serves /dist by default
