[package]
name = "vwf-steps"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Step implementations for VWF workflows"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
vwf-runtime.workspace = true
vwf-render = { path = "../vwf-render" }
vwf-config = { path = "../vwf-config" }
