[package]
name = "vwf-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Runtime abstraction layer for VWF workflow execution"

[dependencies]
anyhow.workspace = true
vwf-types = { path = "../vwf-types" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
